--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "com.scandecode_example"
+        applicationId "com.scandecode_example_1"
         minSdkVersion 15
         targetSdkVersion 27
         versionCode 1
