--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,9 +5,9 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/korea_package"
+        android:icon="@mipmap/nrs_icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/korea_package"
+        android:roundIcon="@mipmap/nrs_icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
         <activity android:name=".SigninPage">
