--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,21 @@
     package="com.scandecode_example">
     <!--<uses-permission android:name="android.permission.SEND_SMS"/>-->
     <uses-permission android:name="android.permission.INTERNET" />
+
+    <!--    camera -->
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+    <uses-permission android:name="android.permission.FLASHLIGHT"/>
+
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+
     <application
+        android:usesCleartextTraffic="true"
+        android:requestLegacyExternalStorage="true"
         android:allowBackup="true"
         android:icon="@mipmap/nrs_icon"
         android:label="@string/app_name"
@@ -18,6 +32,10 @@
         </activity>
         <activity
             android:name=".MainActivity"
+            android:screenOrientation="nosensor">
+        </activity>
+        <activity
+            android:name=".TestActivity"
             android:screenOrientation="nosensor">
         </activity>
 
