--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,11 +42,10 @@
             android:name=".Export_national"
             android:screenOrientation="nosensor">
         </activity>
-        <activity
-            android:name=".TestActivity"
-            android:screenOrientation="nosensor">
-        </activity>
 
+        <meta-data
+            android:name="com.google.mlkit.vision.DEPENDENCIES"
+            android:value="barcode" />
         <service
             android:name=".etc.PlayService"
             android:enabled="true"
